--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "expo-updates": "~0.15.5",
     "expo-camera": "~13.1.0",
     "expo-media-library": "~15.0.0",
-    "expo-sharing": "~11.0.1"
+    "expo-sharing": "~11.0.1",
+    "expo-location": "~15.0.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
